<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.auctioneer.AuctionPhoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/item_image"
            android:layout_marginTop="3dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/placeholder" />
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <EditText
                        android:id="@+id/editTextRam"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:fontFamily="sans-serif"
                        android:hint="@string/ram"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editTextMemory"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:fontFamily="sans-serif"
                        android:hint="@string/memory"
                        android:textColorHint="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <EditText
                        android:id="@+id/editTextModel"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/model"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editTextProcessor"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:digits=".0123456789"
                        android:fontFamily="sans-serif"
                        android:hint="@string/processor"
                        android:textColorHint="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp"
                    android:id="@+id/phone_layout"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <EditText
                        android:id="@+id/editTextVersion"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/version"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editTextCamera"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/camera"
                        android:textColorHint="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <EditText
                        android:id="@+id/editTextManufacturer"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/manufacturer"
                        android:textColorHint="@android:color/darker_gray" />

                    <EditText
                        android:id="@+id/editTextMinimumBid"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:inputType="number"
                        android:digits="0123456789"
                        android:hint="@string/minimumBid"
                        android:textColorHint="@android:color/darker_gray" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="1dp">

                    <ImageView
                        android:id="@+id/calender_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="11dp"
                        android:src="@mipmap/calendar" />

                    <TextView
                        android:id="@+id/date_textView"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="11dp"
                        android:gravity="center"
                        android:inputType="date"
                        android:text="AUCTION DATE"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/clock_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="11dp"
                        android:src="@mipmap/clock" />

                    <TextView
                        android:id="@+id/time_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="11dp"
                        android:gravity="center"
                        android:inputType="time"
                        android:text= "TIME"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/durationClock_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="11dp"
                        android:src="@mipmap/clock" />

                    <TextView
                        android:id="@+id/duration_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="11dp"
                        android:gravity="center"
                        android:inputType="time"
                        android:text="DURATION"
                        android:textSize="16sp" />

                </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/post_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="POST"
        android:layout_marginBottom="1dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"/>
</RelativeLayout>