<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.bidder.BiddingItemDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/item_image"
                android:layout_marginTop="3dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/placeholder" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/auctioneer"
                        android:textColor="@android:color/black" />

                    <TextView

                        android:id="@+id/auctioneer_name_textView"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        tools:text="@string/auctioneer"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/email"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/auctioneer_email_textView"
                        android:layout_width="0dp"
                        android:layout_weight="2.5"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        tools:text="@string/email"
                        android:textColor="@android:color/black"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/phone"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/auctioneer_phone_textView"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        tools:text="@string/phone"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/ram"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/TextViewRam"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        tools:text="@string/ram"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/memory"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/TextViewMemory"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        tools:text="@string/memory"
                        android:textColor="@android:color/black" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/model"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/TextViewModel"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        tools:text="@string/model"
                        android:textColor="@android:color/black" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/processor"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/TextViewProcessor"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:gravity="center"
                        android:fontFamily="sans-serif"
                        tools:text="@string/processor"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/manufacturer"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/TextViewManufacturer"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        tools:text="@string/manufacturer"
                        android:textColor="@android:color/black" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/phone_layout"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="1dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:textSize="18dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/version"
                            android:textColor="@android:color/black"/>

                        <TextView
                            android:id="@+id/TextViewVersion"
                            android:layout_width="0dp"
                            android:textSize="18dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            tools:text="@string/version"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="1dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:textSize="18dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/camera"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/TextViewCamera"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:textSize="18dp"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            tools:text="@string/camera"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/minimumBid"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/TextViewMinimumBid"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="18dp"
                        android:fontFamily="sans-serif"
                        tools:text="@string/minimumBid"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>